--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ dataset/original
 dataset/statistics.csv
 
 crawler/requirements.txt
-crawler/crawler__.py
+crawler/crawler___.py
 crawler/counter.py
+
